apps/dagster/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dagster
  namespace: dagster
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "dagster.lan.tapslab.com"
spec:
  parentRefs:
  - name: default-gateway
    namespace: istio-system
    sectionName: https
  hostnames:
  - "dagster.lan.tapslab.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: dagster-dagit
      port: 80
